--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,18 @@
     width: 90%;
     margin: 0 auto;
 }
+.ant-carousel {
+    margin-bottom: 100px;
+}
+.ant-card-body {
+    background: #fde4cf;
+}
+.tab-movie {
+    margin-top: 100px;
+}
+.ant-tabs-nav-list {
+    background: #e9ecef;
+}
+.ant-children-tab {
+    background: #e9ecef;
+}
